2004-01-15  Alvaro del Castillo  <acs@barrapunto.com>

	* Big changes for the migration to libgda in the SQL backend 
	* configure.in: Added libgda test. In the next revision
	we have to clean the libpq test cause we won't use it.
	* docs/sql/README: we need a UNICODE database in Postgres
	* libplanner/mrp-sql.[ch]: migration from libpq to libgda
	* libplanner/Makefile.am: use libgda libraries 
	* libplanner/mrp-storage-sql.c: propagate GError also in project loading
	* src/Makefile.am: migration from libpq to libgda
	* src/planner-sql-plugin.c: migration from libpq to libgda

2004-01-14  Anders Carlsson  <andersca@gnome.org>

	* dotnet/libplanner/libplanner.metadata: Add some return list types.

2004-01-06  Richard Hult  <richard@imendio.com>

	* configure.in: Require intltool 0.29, comment out dotnet for now.
	
	* Makefile.am: Remove the old intltool hack. 
	
2004-01-03  Anders Carlsson  <andersca@gnome.org>

	* configure.in:
	* dotnet/Makefile.am:
	* dotnet/libplanner/Makefile.am:
	* dotnet/libplanner/libplanner.metadata:
	* dotnet/samples/Example01.cs:
	* dotnet/samples/Example10.cs:
	* dotnet/samples/Makefile.am:
	* dotnet/sources/Makefile:
	* dotnet/sources/planner-sources.xml:
	Add .NET bindings for libplanner.
	
2003-12-16  Richard Hult  <richard@imendio.com>

	* src/planner-print-dialog.c:
	* src/planner-gantt-view.c:
	* src/planner-resource-view.c:
	* src/planner-task-view.c:
	* src/planner-view-loader.c:
	* src/planner-view.c:
	* src/planner-view.h: Add a name per view so we can build gconf
	keys for view preferences and use those to remember which views
	should be printed.

	* src/planner-sql-plugin.c: Fix indentation.

2003-12-16  Richard Hult  <richard@imendio.com>

	* src/planner-sql-plugin.c (sql_plugin_retrieve_db_values): Don't
	access the label that was removed.

2003-12-16  Christian Neumair  <chris@gnome-de.org>

	* data/glade/add-predecessor.glade:
	* data/glade/calendar-dialog.glade:
	* data/glade/group-dialog.glade: