@@ -1,3 +1,7 @@
+2004-01-22  Xavier Ordoquy   <xordoquy@wanadoo.fr>
+
+	* src/planner-ttable-row.c: fixed segfault when leaving planner.
+
 2004-01-15  Alvaro del Castillo  <acs@barrapunto.com>
 
 	* Big changes for the migration to libgda in the SQL backend 
